--- a/main/Mms.apk/res/values-hr/strings.xml
+++ b/main/Mms.apk/res/values-hr/strings.xml
@@ -968,6 +968,18 @@ Odlazna SMS poruka potrebna je za aktiviranje Mi Poruka. Vaš mobilni operater n
   <string name="mx_type_guide">Šaljite poruke drugim HyperOS uređajima bez nastanka troškova</string>
   <string name="my_location">Moja lokacija:</string>
   <string name="need_download">Sinkroniziram…</string>
+  <string name="net_message_download_btn_content_desc">Preuzimanje</string>
+  <string name="net_message_json_card_core_entity_content_desc1">Kopiraj kod %s</string>
+  <string name="net_message_json_card_core_entity_content_desc2">Otvori poveznicu %s</string>
+  <string name="net_message_json_card_core_entity_content_desc3">Otvori aplikaciju</string>
+  <string name="net_message_json_card_core_entity_content_desc4">Otvori kalendar</string>
+  <string name="net_message_json_card_core_entity_content_desc5">Pozovi %s</string>
+  <string name="net_message_json_card_core_entity_content_desc6">Odgovor</string>
+  <string name="net_message_media_card_img_content_desc">Slika</string>
+  <string name="net_message_media_card_video_complete_play_content_desc">Video reprodukcija dovršena</string>
+  <string name="net_message_media_card_video_content_desc">Videozapis</string>
+  <string name="net_message_media_card_video_pause_play_content_desc">Pauziraj</string>
+  <string name="net_message_media_card_video_start_play_content_desc">Reproduciraj</string>
   <string name="net_sms_subscribed">Uspješno pretplaćeno</string>
   <string name="net_sms_unsubscribe">Pretplata otkazana</string>
   <string name="net_unavailable">"Mreža nije dostupna"</string>
