--- a/main/Bluetooth.apk/res/values-hr/strings.xml
+++ b/main/Bluetooth.apk/res/values-hr/strings.xml
@@ -199,6 +199,7 @@
 	<string name="miui_transfer_history_title">Bluetooth prijenosi</string>
 	<string name="miui_transfer_inbound_title">Dolazno</string>
 	<string name="miui_transfer_outbound_title">Odlazno</string>
+	<string name="miuix_accessibility_title">Naslov</string>
 	<string name="miuix_access_state_desc">Odabrano</string>
 	<string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
