--- a/main/MiuiScanner.apk/res/values-hr/strings.xml
+++ b/main/MiuiScanner.apk/res/values-hr/strings.xml
@@ -165,6 +165,9 @@
   <string name="content_description_move">Premješteno ispod \"%s\"</string>
   <string name="content_description_movetop">Premješteno na vrh</string>
   <string name="content_description_next">Sljedeća stranica</string>
+  <string name="content_description_off">Isključeno</string>
+  <string name="content_description_on">Uključeno</string>
+  <string name="content_description_switch">Prekidač</string>
   <string name="content_description_page">Stranica: %s</string>
   <string name="content_description_pre">Prethodna stranica</string>
   <string name="content_description_qr_arrow">Strelica QR koda</string>
@@ -730,6 +733,7 @@
   <string name="repeat_import">Uvezi ponovno</string>
   <string name="request_server_failed">"Nije uspjelo povezivanje s poslužiteljem"</string>
   <string name="reshoot">Pokušajte ponovno</string>
+  <string name="result_calendar_is_not_installed">Deinstalirali ste Kalendar. Nije moguće dodati događaj.</string>
   <string name="result_of_identifying_text_is_empty">"Tekst nije prepoznat"</string>
   <string name="satisfaction_research">Anketa o zadovoljstvu korisnika</string>
   <string name="satisfaction_research_questionnaire">Dodirnite poveznicu za anketu u nastavku da nam kažete što mislite o Skeneru&lt;br&gt;&lt;font color=\"#0D84FF\"&gt;%s&lt;/font&gt;&lt;br&gt;</string>
